Bug 1696786 - Fix a couple bugs in Windows rollup code. r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D130310